webook/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0.29
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
#            这边对应 mysql 的数据存储
            - mountPath: /var/lib/mysql
#              我 POD 里那么多，我用哪个
              name: mysql-storage  # 我用的是 volumes 里面的 mysql-storage
      restartPolicy: Always
#      我整个 POD 有哪些
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
