webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
# 这是一个 Deployment
  name: webook
spec:
#  副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
# template 描述的是你的 POD 是什么样的
  template:
    metadata:
      name: webook
#     这个标签和上面的 matchLabels 的要对的上
      labels:
#        上面 selector 里面找的就是这个 label
        app: webook
#   POD 的具体信息
    spec:
#     pod 里面运行的 container
      containers:
        - name: webook
          image: sparrow/webook:v0.0.1
          ports:
            # main 函数中写死了 8080
            - containerPort: 8080
