webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
#      k8s内部访问的端口
      port: 11379
#      Redis默认端口
      targetPort: 6379
#      nodePort: 外部访问的端口 30000-32767 之间
      nodePort: 30002
  type: NodePort
