webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
#  代表这是我们的 webook 本体
  name: webook
#  规格说明，怎样的服务
spec:
  # 负载均衡
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
